Kubernetes/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: radarr
  name: radarr
  namespace: media
spec:
  selector:
    matchLabels:
      io.kompose.service: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: radarr
    spec:
      containers:
        - image: linuxserver/radarr:6.0.4
          name: radarr
          ports:
            - containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: radarr-data
            - mountPath: /data
              name: radarr-storage
      volumes:
        - name: arr-scripts
          configMap:
            name: arr-scripts
            defaultMode: 0755
        - name: arr-config
          configMap:
            name: arr-config
        - name: radarr-data
          persistentVolumeClaim:
            claimName: radarr-data
        - name: radarr-storage
          hostPath:
            path: /Storage
