Kubernetes/media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: radarr
  name: radarr
  namespace: media
spec:
  ports:
    - port: 7878
  selector:
    io.kompose.service: radarr
