Kubernetes/media/radarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^radarr\.(.+)`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: radarr
          port: 7878
